--- a/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
+++ b/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.layout.Pane?>
 <GridPane alignment="CENTER" maxHeight="Infinity" maxWidth="Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../stylesheets/generatorViewStyle.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.GeneratorViewImpl">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="Infinity" prefWidth="250.0" />
@@ -29,7 +29,7 @@
         <VBox alignment="CENTER" prefHeight="20.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="1">
             <children>
                 <Pane minHeight="0.0" VBox.vgrow="SOMETIMES" />
-                <Slider fx:id="strengthSlider" maxWidth="400.0" minWidth="400.0" prefWidth="400.0" />
+                <Slider fx:id="strengthSlider" maxWidth="400.0" minWidth="400.0" prefWidth="400.0" value="50.0" />
                 <Pane minHeight="0.0" VBox.vgrow="SOMETIMES" />
             </children>
         </VBox>
