--- a/desktop-app/src/main/resources/Layouts/RegisterView.fxml
+++ b/desktop-app/src/main/resources/Layouts/RegisterView.fxml
@@ -29,7 +29,7 @@
 
    </VBox>
       <Pane maxHeight="Infinity" minHeight="0.0" VBox.vgrow="SOMETIMES" />
-      <Button fx:id="reconnectButton" disable="true" styleClass="reconnect-button" text="Reconnect" textAlignment="CENTER">
+      <Button fx:id="reconnectButton" focusTraversable="false" disable="true" styleClass="reconnect-button" text="Reconnect" textAlignment="CENTER">
          <VBox.margin>
             <Insets top="50.0" />
          </VBox.margin></Button>
