--- a/desktop-app/src/main/resources/stylesheets/loginViewStyle.css
+++ b/desktop-app/src/main/resources/stylesheets/loginViewStyle.css
@@ -42,7 +42,7 @@
     -fx-background: none;
     -fx-display: block;
     -fx-margin-top: 20px;
-    -fx-test-align: center;
+    -fx-text-align: center;
     -fx-border-width: 2px;
     -fx-border-style: solid;
     -fx-border-color: #2ecc71;
@@ -61,5 +61,20 @@
 }
 
 .reconnect-button {
+    -fx-border: 0;
+    -fx-background: none;
+    -fx-display: block;
+    -fx-text-align: center;
+    -fx-border-width: 2px;
+    -fx-border-style: solid;
+    -fx-border-color: red;
+    -fx-focus-color: none;
+    -fx-text-fill: black;
+    -fx-border-radius: 6px;
+    -fx-cursor: hand;
+}
 
+.reconnect-button:hover {
+    -fx-background-color: red;
+    -fx-background-radius: 6px;
 }
