--- a/desktop-app/src/main/resources/Layouts/LoginView.fxml
+++ b/desktop-app/src/main/resources/Layouts/LoginView.fxml
@@ -11,6 +11,7 @@
 <VBox fx:id="root" alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" styleClass="canvas" stylesheets="@../stylesheets/loginViewStyle.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.LoginViewImpl">
    <children>
       <Pane maxHeight="Infinity" minHeight="0.0" VBox.vgrow="SOMETIMES" />
+      <Label fx:id="noConnectionLabel" text="NO CONNECTION" opacity="0.0" style="-fx-text-fill: red; -fx-font-size: 16px;"/>
       <VBox fx:id="form" alignment="CENTER" spacing="10.0" styleClass="form">
          <children>
             <TextField fx:id="loginField" alignment="CENTER" maxWidth="400.0" opacity="0.75" prefWidth="400.0" promptText="login" styleClass="text-field" VBox.vgrow="NEVER">
