--- a/desktop-app/src/main/resources/stylesheets/registerViewStyle.css
+++ b/desktop-app/src/main/resources/stylesheets/registerViewStyle.css
@@ -68,7 +68,7 @@
     -fx-border-style: solid;
     -fx-border-color: red;
     -fx-focus-color: none;
-    -fx-text-fill: black;
+    -fx-text-fill: white;
     -fx-border-radius: 6px;
     -fx-cursor: hand;
 }
