--- a/desktop-app/src/main/resources/Layouts/LoginView.fxml
+++ b/desktop-app/src/main/resources/Layouts/LoginView.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -13,10 +12,7 @@
 <VBox fx:id="root" alignment="CENTER" prefHeight="600.00" prefWidth="400.00" spacing="10.0" styleClass="canvas" stylesheets="@../stylesheets/loginViewStyle.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Views.Implementations.LoginViewImpl">
    <children>
       <Pane maxHeight="Infinity" minHeight="0.0" VBox.vgrow="SOMETIMES" />
-      <ImageView fitHeight="150.0" fitWidth="150.0">
-         <image>
-            <Image url="@../../../../../../../../Users/Admin/.ImageStyler/admin/logo_transparent.png" />
-         </image></ImageView>
+      <ImageView fx:id="logo" fitHeight="150.0" fitWidth="150.0" />
       <Label fx:id="noConnectionLabel" opacity="0.0" style="-fx-text-fill: red; -fx-font-size: 16px;" text="NO CONNECTION" />
       <VBox fx:id="form" alignment="CENTER" spacing="10.0" styleClass="form">
          <children>
