--- a/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
+++ b/desktop-app/src/main/resources/Layouts/GeneratorView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
@@ -45,11 +46,11 @@
                 <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <ImageView fx:id="contentImage" focusTraversable="false" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
-                <Button text="Load image" focusTraversable="false" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                <ImageView fx:id="contentImage" fitHeight="200.0" fitWidth="200.0" focusTraversable="false" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
+                <CheckBox fx:id="fullSizeCheck" GridPane.columnIndex="0" GridPane.rowIndex="1" mnemonicParsing="false" text="Generate with original size" onAction="#onFullSize"/>
             </children>
         </GridPane>
-        <Label alignment="CENTER" focusTraversable="false" contentDisplay="CENTER" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: limegreen;" styleClass="plus" text="+" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+        <Label alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: limegreen;" styleClass="plus" text="+" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
             <padding>
                 <Insets bottom="3.0" left="5.0" right="5.0" />
             </padding>
@@ -70,9 +71,9 @@
                 <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <ImageView fx:id="styleImage" focusTraversable="false" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
+                <ImageView fx:id="styleImage" fitHeight="200.0" fitWidth="200.0" focusTraversable="false" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="0" GridPane.valignment="CENTER" />
                 <Button fx:id="leftStyleImage" focusTraversable="false" minHeight="25.0" minWidth="25.0" onAction="#onShiftLeftStyleImage" prefHeight="25.0" prefWidth="25.0" styleClass="shift-button" text="&lt;" GridPane.columnIndex="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                <Button fx:id="rightStyleImage" focusTraversable="false" alignment="TOP_CENTER" contentDisplay="CENTER" minHeight="25.0" minWidth="25.0" onAction="#onShiftRightStyleImage" prefHeight="25.0" prefWidth="25.0" styleClass="shift-button" text="&gt;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                <Button fx:id="rightStyleImage" alignment="TOP_CENTER" contentDisplay="CENTER" focusTraversable="false" minHeight="25.0" minWidth="25.0" onAction="#onShiftRightStyleImage" prefHeight="25.0" prefWidth="25.0" styleClass="shift-button" text="&gt;" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <padding>
                   <Insets top="5.0" />
                </padding></Button>
@@ -82,7 +83,7 @@
         <VBox alignment="TOP_CENTER" prefHeight="100.0" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="3">
             <children>
                 <Pane minHeight="0.0" VBox.vgrow="SOMETIMES" />
-                <TextField fx:id="photoName" focusTraversable="false" alignment="TOP_CENTER" maxWidth="150.0" prefWidth="150.0" promptText="Name a photo" styleClass="photo-name" VBox.vgrow="SOMETIMES">
+                <TextField fx:id="photoName" alignment="TOP_CENTER" focusTraversable="false" maxWidth="150.0" prefWidth="150.0" promptText="Name a photo" styleClass="photo-name" VBox.vgrow="SOMETIMES">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -93,7 +94,7 @@
                         <Insets top="15.0" />
                     </VBox.margin>
                 </TextField>
-                <Button fx:id="generateButton" focusTraversable="false" alignment="CENTER" mnemonicParsing="false" onAction="#onGenerate" styleClass="gen-button" text="GENERATE" VBox.vgrow="SOMETIMES">
+                <Button fx:id="generateButton" alignment="CENTER" focusTraversable="false" mnemonicParsing="false" onAction="#onGenerate" styleClass="gen-button" text="GENERATE" VBox.vgrow="SOMETIMES">
                     <VBox.margin>
                         <Insets top="5.0" />
                     </VBox.margin>
